--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -30,11 +30,11 @@ The disputes extrinsic $\xtdisputes$ is functional grouping of three otherwise i
     \where \xtverdicts &\in \sequence{\tuple{
       \hash,
       \ffrac{\thetime}{\epochlen} - \N_2,
-      \sequence{\tuple{
+      \sequence[\floor{\twothirds\valcount} + 1]{\tuple{
         \set{\top, \bot},
         \valindex,
         \signature
-      }}_{\floor{\twothirds\valcount} + 1}
+      }}
     }}\\
     \also \xtculprits &\in \sequence{\tuple{\hash, \edkey, \signature}} \,,\quad
     \xtfaults \in \sequence{\tuple{\hash, \set{\top,\bot}, \edkey, \signature}}
