--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -31,14 +31,14 @@
   \begin{description}
     \item[$\dict{K}{V}$] The set of dictionaries making a partial bijection of domain $k$ to range $v$. See section \ref{sec:dictionaries}.
   \end{description}
-  \item[$\sig{k}{m}$] The set of valid Ed25519 signatures of the key $k$ and message $m$. A subset of $\bloboflen{64}$. See section \ref{sec:cryptography}.
-  \item[$\bandersig{k}{c}{m}$] The set of Bandersnatch signatures of the public key $k$, context $c$ and message $m$. A subset of $\bloboflen{64}$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
+  \item[$\sig{k}{m}$] The set of valid Ed25519 signatures of the key $k$ and message $m$. A subset of $\blob[64]$. See section \ref{sec:cryptography}.
+  \item[$\bandersig{k}{c}{m}$] The set of Bandersnatch signatures of the public key $k$, context $c$ and message $m$. A subset of $\blob[64]$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
   \item[$\bandersnatch{r}{c}{m}$] The set of Bandersnatch Ring\textsc{vrf} proofs of the root $r$, context $c$ and message $m$. See section \ref{sec:cryptography}.
   \item[$\segment$] The set of data segments, equivalent to octet sequences of length $\mathsf{W}_G$. See equation \ref{eq:segment}.
-  \item[$\hash$] The set of 32-octet cryptographic values. A subset of $\bloboflen{32}$. $\hash$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
+  \item[$\hash$] The set of 32-octet cryptographic values. A subset of $\blob[32]$. $\hash$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
   \begin{description}
-    \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\bloboflen{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-    \item[$\edkey$] The set of Ed25519 public keys. A subset of $\bloboflen{32}$. See section \ref{sec:signing}.
+    \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\blob[32]$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+    \item[$\edkey$] The set of Ed25519 public keys. A subset of $\blob[32]$. See section \ref{sec:signing}.
   \end{description}
   \item[$\workitem$] The set of work items. See equation \ref{eq:workitem}.
   \item[$\workerror$] The set of work execution errors.
@@ -56,8 +56,8 @@
   \item[$\workcontext$] The set of refinement contexts.
   \item[$\blob$] The set of octet strings/``blobs''. Subscript denotes length. See section \ref{sec:sequences}.
   \begin{description}
-    \item[$\blskey$] The set of \textsc{bls} public keys. A subset of $\bloboflen{144}$. See section \ref{sec:signing}.
-    \item[$\ringroot$] The set of Bandersnatch ring roots. A subset of $\bloboflen{144}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+    \item[$\blskey$] The set of \textsc{bls} public keys. A subset of $\blob[144]$. See section \ref{sec:signing}.
+    \item[$\ringroot$] The set of Bandersnatch ring roots. A subset of $\blob[144]$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
 \end{description}
 
