--- a/text/overview.tex
+++ b/text/overview.tex
@@ -31,7 +31,7 @@ The header is a collection of metadata primarily concerned with cryptographic re
 
 Our state may be logically partitioned into several largely independent segments which can both help avoid visual clutter within our protocol description and provide formality over elements of computation which may be simultaneously calculated (i.e. parallelized). We therefore pronounce an equivalence between $\thestate$ (some complete state) and a tuple of partitioned segments of that state:
 \begin{align}\label{eq:statecomposition}
-  \thestate &\equiv \tup{\authpool, \recenthistory, \safrole, \accounts, \entropy, \stagingset, \activeset, \previousset, \reports, \thetime, \authqueue, \privileges, \disputes, \activity, \ready, \accumulated}
+  \thestate &\equiv \tup{\authpool, \recent, \lastaccout, \safrole, \accounts, \entropy, \stagingset, \activeset, \previousset, \reports, \thetime, \authqueue, \privileges, \disputes, \activity, \ready, \accumulated}
 \end{align}
 
 In summary, $\accounts$ is the portion of state dealing with \emph{services}, analogous in \Jam to the Yellow Paper's (smart contract) \emph{accounts}, the only state of the \emph{YP}'s Ethereum. The identities of services which hold some privileged status are tracked in $\privileges$.
@@ -144,20 +144,20 @@ In the present work, we presume the definition of a \emph{Polkadot Virtual Machi
 
 The \textsc{pvm} is comparable to the \textsc{evm} defined in the Yellow Paper, but somewhat simpler: the complex instructions for cryptographic operations are missing as are those which deal with environmental interactions. Overall it is far less opinionated since it alters a pre-existing general purpose design, \textsc{risc-v}, and optimizes it for our needs. This gives us excellent pre-existing tooling, since \textsc{pvm} remains essentially compatible with \textsc{risc-v}, including support from the compiler toolkit \textsc{llvm} and languages such as Rust and C++. Furthermore, the instruction set simplicity which \textsc{risc-v} and \textsc{pvm} share, together with the register size (64-bit), active number (13) and endianness (little) make it especially well-suited for creating efficient recompilers on to common hardware architectures.
 
-The \textsc{pvm} is fully defined in appendix \ref{sec:virtualmachine}, but for contextualization we will briefly summarize the basic invocation function $\Psi$ which computes the resultant state of a \textsc{pvm} instance initialized with some registers ($\sequence{\pvmreg}_{13}$) and \textsc{ram} ($\ram$) and has executed for up to some amount of gas ($\gas$), a number of approximately time-proportional computational steps:
+The \textsc{pvm} is fully defined in appendix \ref{sec:virtualmachine}, but for contextualization we will briefly summarize the basic invocation function $\Psi$ which computes the resultant state of a \textsc{pvm} instance initialized with some registers ($\sequence[13]{\pvmreg}$) and \textsc{ram} ($\ram$) and has executed for up to some amount of gas ($\gas$), a number of approximately time-proportional computational steps:
 \begin{equation}
   \Psi\colon
   \tuple{\,
     \begin{alignedat}{3}
       &\blob,\,\ \ \pvmreg,\,\ \ &&\gas,\,\\
-      &\!\sequence{\pvmreg}_{13},\,\ \ &&\ram\\
+      &\!\sequence[13]{\pvmreg},\,\ \ &&\ram\\
     \end{alignedat}
   \,}
   \to
   \tuple{\,
     \begin{aligned}
       &\set{\halt, \panic, \oog} \cup \set{\fault,\host} \times \pvmreg,\\
-      &\pvmreg,\ \ \signedgas,\ \ \sequence{\pvmreg}_{13},\ \ \ram
+      &\pvmreg,\ \ \signedgas,\ \ \sequence[13]{\pvmreg},\ \ \ram
     \end{aligned}
   \,}
 \end{equation}
@@ -171,11 +171,11 @@ We refer to the time-proportional computational steps as \emph{gas} (much like i
 
 It is left as a rather important implementation detail to ensure that the amount of time taken while computing the function $\Psi(\dots, \gascounter, \dots)$ has a maximum computation time approximately proportional to the value of $\gascounter$ regardless of other operands.
 
-The \textsc{pvm} is a very simple \textsc{risc} \emph{register machine} and as such has 13 registers, each of which is a 64-bit quantity, denoted as $\pvmreg$, a natural less than $2^{64}$.\footnote{This is three fewer than \textsc{risc-v}'s 16, however the amount that program code output by compilers uses is 13 since two are reserved for operating system use and the third is fixed as zero} Within the context of the \textsc{pvm}, $\registers \in \sequence{\pvmreg}_{13}$ is typically used to denote the registers.
+The \textsc{pvm} is a very simple \textsc{risc} \emph{register machine} and as such has 13 registers, each of which is a 64-bit quantity, denoted as $\pvmreg$, a natural less than $2^{64}$.\footnote{This is three fewer than \textsc{risc-v}'s 16, however the amount that program code output by compilers uses is 13 since two are reserved for operating system use and the third is fixed as zero} Within the context of the \textsc{pvm}, $\registers \in \sequence[13]{\pvmreg}$ is typically used to denote the registers.
 \begin{align}\label{eq:pvmmemory}
   \ram &\equiv \tuple{
-    \isa{\ram¬value}{\bloboflen{2^{32}}},
-    \isa{\ram¬access}{\sequence{\set{\text{W}, \text{R}, \none}}\sub{p}}
+    \isa{\ram¬value}{\blob[2^{32}]},
+    \isa{\ram¬access}{\sequence[p]{\set{\text{W}, \text{R}, \none}}}
   }\,,\ p = \frac{2^{32}}{\mathsf{Z}_P}\\
   \mathsf{Z}_P &= 2^{12}
 \end{align}
