--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -28,7 +28,7 @@ Passing multiple arguments to the serialization functions is equivalent to passi
 We define general natural number serialization, able to encode naturals of up to $2^{64}$, as:
 \begin{equation}
   \fnencode\colon\abracegroup{
-    \Nbits{64} &\to \bloboflen{1:9} \\
+    \Nbits{64} &\to \blob[1:9] \\
     x &\mapsto \begin{cases}
      \sq{0} &\when x = 0 \\
       \sq{2^8-2^{8-l} + \ffrac{x}{2^{8l}}} \concat \encode[l]{x \bmod 2^{8l}} &\when \exists l \in \N_8 : 2^{7l} \le x < 2^{7(l+1)} \\
@@ -100,7 +100,7 @@ For any values which are sets and don't already have a defined encoding above, w
 We first define the trivial natural number serialization functions which are subscripted by the number of octets of the final sequence. Values are encoded in a regular little-endian fashion. This is utilized for almost all integer encoding across the protocol. Formally:
 \begin{equation}
   \fnencode[l \in \N]\colon\abracegroup{
-    \Nbits{8l} &\to \bloboflen{l} \\
+    \Nbits{8l} &\to \blob[l] \\
     x &\mapsto \begin{cases}
       \sq{} &\when l = 0 \\
       \sq{x \bmod 256} \concat \encode[l - 1]{\floor{\frac{x}{256}}} &\otherwise
